(Issue #45) Updated code and tests as part of getting the changes on this branch building and running on Summit.  As part of this, the high-level configuration and control flow of Sedov applications has been factored out. This was partially motivated by the need to have the DataPacket prototype destroyed before the RuntimeBackend is finalized.  The part of the simulation that created and used the prototype could have been enclosed in a local-scope code block, but the separation of common control flow and test-specific code is nice, clean, and mimics Flash-X structure.
Ran all tests once on Summit with quick review of build and test logs.  All
tests build and execute.  Some spot checking of Sedov results hint an no
regression.  Rigorous log review and regression testing TBD after a full code
review.

--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -12,7 +12,6 @@ LDFLAGS_TEST        =
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
-	$(SEDOVDIR)/loadGridConfiguration.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
@@ -25,4 +24,5 @@ SRCS_TEST = \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
 	$(SEDOVDIR)/sim_getVariableNames.cpp \
 	$(SEDOVDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
-	$(TESTDIR)/sedov_cpu.cpp
+	$(TESTDIR)/Driver_executeSimulation.cpp \
+	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
