--- a/test/Sedov/gpu/variant1/Makefile.test
+++ b/test/Sedov/gpu/variant1/Makefile.test
@@ -14,7 +14,6 @@ LDFLAGS_TEST        =
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
-	$(SEDOVDIR)/loadGridConfiguration.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
@@ -38,6 +37,7 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Io.cpp \
 	$(SEDOVDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
+	$(TESTDIR)/Driver_executeSimulation.cpp \
 	$(TESTDIR)/DataPacket_Hydro_gpu_1.cpp \
 	$(TESTDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_1.cpp \
-	$(TESTDIR)/sedov_gpu_1.cpp
+	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
