--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -15,7 +15,6 @@ LDFLAGS_TEST        =
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
-	$(SEDOVDIR)/loadGridConfiguration.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
@@ -36,4 +35,5 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVGPUV3DIR)/DataPacket_Hydro_gpu_3.cpp \
 	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
-	$(TESTDIR)/sedov_gpuonly_3.cpp
+	$(TESTDIR)/Driver_executeSimulation.cpp \
+	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
