--- a/test/Grid/multiple/Makefile.test
+++ b/test/Grid/multiple/Makefile.test
@@ -2,9 +2,10 @@ BINARYNAME          = test_grid_multiple.x
 
 TESTGRIDDIR         = $(BASEDIR)/test/Grid
 TESTDIR             = $(TESTGRIDDIR)/multiple
+TESTBASEDIR         = $(BASEDIR)/test/Base
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
-CXXFLAGS_TEST_PROD  = -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
 SRCS_TEST = \
