--- a/sites/gce/Makefile.site.ci
+++ b/sites/gce/Makefile.site.ci
@@ -1,6 +1,7 @@
 BASEDIR      = $(HOME)/$(CI_PROJECT_DIR)
 AMREXDIR     = $(RUNTIME_DEP_PATH)/gnu_7.5.0/AMReX_$(NDIM)D
 GTESTDIR     = $(RUNTIME_DEP_PATH)/gnu_7.5.0/googletest
+JSONDIR      = $(RUNTIME_DEP_PATH)/json/single_include
 CUDADIR      =
 
 CXXCOMPNAME  = gnu
