--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -2,16 +2,18 @@
 BINARYNAME          = sedov_cpu.x
 
 # Define relevant paths
-SEDOVDIR            = $(BASEDIR)/test/Sedov
-TESTDIR             = $(BASEDIR)/test/Sedov/cpu
+TESTROOTDIR         = $(BASEDIR)/test
+SEDOVDIR            = $(TESTROOTDIR)/Sedov
+TESTDIR             = $(TESTROOTDIR)/Sedov/cpu
 
 # Define compiler flags in CXXFLAGS_TEST_*
-CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(TESTDIR)
-CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
 LDFLAGS_TEST        =
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
