(Issue #28) ThreadTeam test now uses JSON-format config file.  Setup the GCE par file so that the CI job scripts can set the runtime parameter based on which hardware they run.  This is a quasi-test of job scripts that rerun a test to explore a parameter space.  The setup script was updated to help with this. Specifically, it copies the par file with a name that won't work with the test with the expectation that job scripts will copy the file to the appropriate name (no overwriting!) with the desired RP values.
Started building up build system docs in the DevGuide.

Updated the RP class to use .at() instead of [].  As with the the stdlib, at
error checks for invalid indices.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,8 +85,8 @@ test_gnu:
  # Unittests
 # - ./buildTestGrid.sh
 # - ./testGrid.sh
-# - ./buildTestThreadTeam.sh
-# - ./testThreadTeam.sh
+ - ./buildTestThreadTeam.sh
+ - ./testThreadTeam.sh
 # - ./buildTestRuntimeNull.sh
 # - ./testRuntimeNull.sh
 # - ./buildTestRuntimeCpu.sh
