--- a/test/ThreadTeam/Makefile.test
+++ b/test/ThreadTeam/Makefile.test
@@ -2,16 +2,18 @@
 BINARYNAME          = test_threadteam.x
 
 # Define relevant paths
-TESTDIR             = $(BASEDIR)/test/ThreadTeam
+TESTROOTDIR         = $(BASEDIR)/test
+TESTDIR             = $(TESTROOTDIR)/ThreadTeam
 
 # Define compiler flags in CXXFLAGS_TEST_*
 # This test uses Google Test
-CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) $(CXXFLAGS_GTEST) -DDEBUG_RUNTIME
-CXXFLAGS_TEST_PROD  = -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST) -DDEBUG_RUNTIME
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
     $(TESTDIR)/estimateTimerResolution.cpp \
     $(TESTDIR)/testThreadRoutines.cpp \
     $(TESTDIR)/testThreadTeam.cpp \
