--- a/test/Grid/multiple/Makefile.test
+++ b/test/Grid/multiple/Makefile.test
@@ -1,14 +1,16 @@
 BINARYNAME          = test_grid_multiple.x
 
-TESTGRIDDIR         = $(BASEDIR)/test/Grid
+TESTROOTDIR         = $(BASEDIR)/test
+TESTBASEDIR         = $(TESTROOTDIR)/Base
+TESTGRIDDIR         = $(TESTROOTDIR)/Grid
 TESTDIR             = $(TESTGRIDDIR)/multiple
-TESTBASEDIR         = $(BASEDIR)/test/Base
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
-CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(TESTGRIDDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
     $(TESTDIR)/runGridTest.cpp \
     $(TESTDIR)/gridUnitTest.cpp \
     $(TESTDIR)/errorEstMultiple.cpp \
