--- a/test/Runtime/cpu/Makefile.test
+++ b/test/Runtime/cpu/Makefile.test
@@ -1,18 +1,15 @@
-# Define the desired binary name with BINARYNAME
 BINARYNAME          = test_runtime_cpu.x
 
-# Define relevant paths
-RUNTIMEDIR          = $(BASEDIR)/test/Runtime
-TESTDIR             = $(RUNTIMEDIR)/cpu
-TESTBASEDIR         = $(BASEDIR)/test/Base
+TESTROOTDIR         = $(BASEDIR)/test
+TESTBASEDIR         = $(TESTROOTDIR)/Base
+RUNTIMEDIR          = $(TESTROOTDIR)/Runtime
 
-# Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
-CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
-# Define list of sources in SRCS_TEST
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
     $(TESTBASEDIR)/errorEstBlank.cpp \
