(Issue #28) Runtime/null now using JSON-format RP file.  In reality, it never uses it.  With this, all tests in the GCE test suite have been transitioned to JSON and true RPs.  Summit remains...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,8 +87,8 @@ test_gnu:
  - ./testGrid.sh
  - ./buildTestThreadTeam.sh
  - ./testThreadTeam.sh
-# - ./buildTestRuntimeNull.sh
-# - ./testRuntimeNull.sh
+ - ./buildTestRuntimeNull.sh
+ - ./testRuntimeNull.sh
  - ./buildTestRuntimeCpu.sh
  - ./testRuntimeCpu.sh
  # Acquire Sedov results for regression testing
@@ -111,6 +111,7 @@ test_gnu:
 test_doxygen:
  stage: test
  script:
- - pushd docs/doxygen && doxygen && popd
-
+ - pushd docs/doxygen
+ - doxygen
+ - popd
 
