--- a/test/Runtime/null/Makefile.test
+++ b/test/Runtime/null/Makefile.test
@@ -1,15 +1,13 @@
-# Define the desired binary name with BINARYNAME
 BINARYNAME          = test_runtime_null.x
 
-# Define relevant paths
-TESTDIR             = $(BASEDIR)/test/Runtime/null
+TESTROOTDIR         = $(BASEDIR)/test
+RUNTIMEDIR          = $(TESTROOTDIR)/Runtime
+TESTDIR             = $(RUNTIMEDIR)/null
 
-# Define compiler flags in CXXFLAGS_TEST_*
 CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) $(CXXFLAGS_GTEST)
 CXXFLAGS_TEST_PROD  = -I$(TESTDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
-# Define list of sources in SRCS_TEST
 SRCS_TEST = \
     $(TESTDIR)/testRuntimeNull.cpp \
     $(TESTDIR)/runRuntimeTests.cpp
