--- a/sites/summit/Makefile.site
+++ b/sites/summit/Makefile.site
@@ -7,6 +7,7 @@
 BASEDIR      = $(MILHOJA_CODE_REPO)
 AMREXDIR     = $(MILHOJA_TEST_REPO)/summit/pgi_current/AMReX_$(NDIM)d
 GTESTDIR     = $(MILHOJA_TEST_REPO)/summit/pgi_current/googletest
+JSONDIR      = $(OLCF_NLOHMANN_JSON_ROOT)/include
 CUDADIR      = $(OLCF_CUDA_ROOT)
 
 # Define the following compiler-related flags
