--- a/test/Sedov/gpu/variant3/gpuonly/Makefile.test
+++ b/test/Sedov/gpu/variant3/gpuonly/Makefile.test
@@ -1,20 +1,18 @@
-# Define the desired binary name with BINARYNAME
 BINARYNAME          = sedov_gpu.x
 
-# Define relevant paths
-SEDOVDIR            = $(BASEDIR)/test/Sedov
-SEDOVGPUDIR         = $(BASEDIR)/test/Sedov/gpu
-SEDOVGPUV3DIR       = $(BASEDIR)/test/Sedov/gpu/variant3
-TESTDIR             = $(BASEDIR)/test/Sedov/gpu/variant3/gpuonly
+TESTROOTDIR         = $(BASEDIR)/test
+SEDOVDIR            = $(TESTROOTDIR)/Sedov
+SEDOVGPUDIR         = $(SEDOVDIR)/gpu
+SEDOVGPUV3DIR       = $(SEDOVGPUDIR)/variant3
+TESTDIR             = $(SEDOVGPUV3DIR)/gpuonly
 
-# Define compiler flags in CXXFLAGS_TEST_*
-CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
-CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(SEDOVGPUV3DIR) -I$(TESTDIR)
 CUFLAGS_TEST        = -I$(SEDOVDIR)
 LDFLAGS_TEST        =
 
-# Define list of sources in SRCS_TEST
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
@@ -35,5 +33,5 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVGPUV3DIR)/DataPacket_Hydro_gpu_3.cpp \
 	$(SEDOVGPUV3DIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
-	$(TESTDIR)/Driver_executeSimulation.cpp \
+	$(TESTDIR)/Driver_executeSimulation_gpuonly.cpp \
 	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
