--- a/test/Sedov/mpi_omp/Makefile.test
+++ b/test/Sedov/mpi_omp/Makefile.test
@@ -1,17 +1,15 @@
-# Define the desired binary name with BINARYNAME
 BINARYNAME          = sedov_mpi_omp.x
 
-# Define relevant paths
-SEDOVDIR            = $(BASEDIR)/test/Sedov
-TESTDIR             = $(BASEDIR)/test/Sedov/mpi_omp
+TESTROOTDIR         = $(BASEDIR)/test
+SEDOVDIR            = $(TESTROOTDIR)/Sedov
+TESTDIR             = $(SEDOVDIR)/mpi_omp
 
-# Define compiler flags in CXXFLAGS_TEST_*
-CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(TESTDIR)
-CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
 LDFLAGS_TEST        =
 
-# Define list of sources in SRCS_TEST
 SRCS_TEST = \
+	$(TESTROOTDIR)/RuntimeParameters.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
