(Issue #28) The GCE machines were changed recently and therefore CI tests on the 28_RPs branch have been failing because of the SW environment rather than due to SW bugs (hopefully).  Update GitLab CI to only use those CELS GCE runners using Ubuntu 20.04.  Now using the GNU compiler suite v11.1.0.  This uncovered some missing include lines.
I want to have the CI running cleanly again before merging this branch into
main.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,11 +10,14 @@
 # NOTE: The main code here uses pushd/popd.  Careful about this when altering
 #       the code.
 
-# Use CELS's GCE-public runners, which use GCE general computing hardware
+# Use CELS's GCE-public runners, which use GCE general computing hardware.
+# Most runners are now using Ubuntu 20.04 so we restrict ourselves to these
+# runners so that we don't have to maintain two sets of SW stacks by OS.
 default:
  tags:
  - public
  - shared_ssh
+ - 20.04
 
 stages:
   - test
