--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,13 +80,13 @@ test_gnu:
  - source ./pyenv/bin/activate
  - which python
  - which pip
- - pip install --user nose
- - pip install --user numpy
- - pip install --user scipy
- - pip install --user pandas
- - pip install --user matplotlib
- - pip install --user seaborn
- - pip install --user yt
+ - pip install nose
+ - pip install numpy
+ - pip install scipy
+ - pip install pandas
+ - pip install matplotlib
+ - pip install seaborn
+ - pip install yt
  - cd $MILHOJA_CODE_REPO/tools/sedov_pypkg
  - python setup.py test
  - python setup.py sdist && cd dist
