--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,7 @@ test_gnu:
  - export CI_BASE_PATH=$(dirname $HOME/$CI_PROJECT_DIR)
  - export MILHOJA_WORK_REPO=$CI_BASE_PATH/MilhojaTest
  - export MILHOJA_CODE_REPO=$CI_BASE_PATH/OrchestrationRuntime
+ - export MILHOJA_INSTALL_PATH=$CI_BASE_PATH
  - export SEDOV_REGRESSION_TEST=$MILHOJA_CODE_REPO/tools/compare_sedov_results.py
  # The following are used to determine the HW family of the CI runner (i.e., HWFAMILY)
  - . $MILHOJA_TEST_REPO/gce/available_gce_machines.sh
@@ -55,6 +56,7 @@ test_gnu:
  - echo $MILHOJA_TEST_REPO
  - echo $MILHOJA_CODE_REPO
  - echo $MILHOJA_WORK_REPO
+ - echo $MILHOJA_INSTALL_PATH
  - echo $SEDOV_REGRESSION_TEST
  - echo $FCOMPARE_EXE
  ##-- Install pristine clone of external test repo
@@ -95,6 +97,8 @@ test_gnu:
  ##-- Build and run tests
  # Build all variants of a single test first and then run all at once
  - cd $MILHOJA_WORK_REPO/gce
+ # Libraries
+ - ./buildMilhoja.sh
  # Unittests
  - ./buildTestGrid.sh
  - ./testGrid.sh
