(Issue #43) Implemented a minimal Fortran interface for just the Grid functionality.  This was an adaptation and cleaning of the original prototype on the 43cleanup branch.
I was able to successfully build and pass a new Milhoja/Grid unittest in Flash5
using intel on GCE.  With this, it seems that the Fortran/C++ infrastructure is
seeded.  Ideally, the rest of this interface will be developed with TDD using
the Flash5 unittest.  This should allow for more careful and easier development.

--- a/sites/gce/Makefile.site.gnu_mpich
+++ b/sites/gce/Makefile.site.gnu_mpich
@@ -13,6 +13,22 @@ CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG
 CUCOMP       =
 CUFLAGS_PROD =
 
+F90COMP        = mpif90
+F90FLAGS_PROD  = \
+	-O3 -cpp -fbacktrace -march='skylake-avx512' \
+	-fdefault-real-8 -fdefault-double-8 \
+	-finit-real=snan -finit-derived \
+	-finline-functions
+F90FLAGS_DEBUG = \
+	-g -O0 -cpp -fbacktrace \
+	-fdefault-real-8 -fdefault-double-8 \
+	-finit-real=snan -finit-derived \
+	-fbounds-check \
+	-ffpe-trap=invalid,zero,underflow,overflow \
+	-pedantic -Wall -Waliasing \
+	-Wsurprising -Wconversion -Wunderflow \
+	-fimplicit-none -fstack-protector-all
+
 LDFLAGS_STD = -lpthread -lstdc++ -lgfortran
 
 CXXFLAGS_AMREX   = -I$(AMREXDIR)/include
