--- a/sites/gce/Makefile.site.intel_mpich
+++ b/sites/gce/Makefile.site.intel_mpich
@@ -13,6 +13,16 @@ CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG
 CUCOMP       =
 CUFLAGS_PROD =
 
+F90COMP        = mpif90
+F90FLAGS_PROD  = \
+	-O3 -fpp -traceback -init=snan,arrays -fpe0 \
+	-fpconstant -integer-size 32 -double-size 64 -real-size 64
+F90FLAGS_DEBUG = \
+	-g -O0 -fpp -traceback -init=snan,arrays -fpe0 \
+	-fpconstant -integer-size 32 -double-size 64 -real-size 64 \
+	-check output_conversion -warn all,noexternal -warn error -check uninit \
+	-fp-stack-check -check pointers
+
 LDFLAGS_STD = -lpthread -lifcore
 
 CXXFLAGS_AMREX   = -I$(AMREXDIR)/include
