(Issue #51) The amrex::Geometry class's interface for Volume has been updated. Cannot build AMReX-based tests with just the C++11 standard.
I have already updated the AMReX GNU/mpich and Intel/mpich libraries in the GCE
MilhojaTest project folder to 22.06.  These libraries were built on a
sandybridge machine.  I will use CI to see if these changes work.

--- a/Makefile.base
+++ b/Makefile.base
@@ -16,10 +16,11 @@ include Makefile.test
 # Default shell commands
 RM ?= /bin/rm
 
-# Use C++11 standard, flags differ by compiler
+# Milhoja uses just the C++11 standard, but AMReX requires C++14.
+# Flags can differ by compiler.
 # -MMD generates a dependecy list for each file as a side effect
 ifeq ($(CXXCOMPNAME),gnu)
-CXXFLAGS_STD = -std=c++11
+CXXFLAGS_STD = -std=c++14
 DEPFLAG = -MMD
 else ifeq ($(CXXCOMPNAME), pgi)
 CXXFLAGS_STD = -std=c++11
