(Issue #215) Test build system no longer defines setup macros.
To be tested with CI.

--- a/Makefile.base
+++ b/Makefile.base
@@ -55,16 +55,13 @@ CUFLAGS  = $(CUFLAGS_STD) $(CUFLAGS_PROD) -I$(BUILDDIR) $(CUFLAGS_BASE) \
 LDFLAGS  = -L$(LIB_MILHOJA)/lib -lmilhoja $(LIB_AMREX) $(LDFLAGS_TEST) $(LDFLAGS_STD)
 
 ifeq ($(USE_CUDA_BACKEND),true)
-CXXFLAGS += -DMILHOJA_USE_CUDA_BACKEND
-CUFLAGS  += -DMILHOJA_USE_CUDA_BACKEND
 CU_SRCS   = $(CU_SRCS_BASE) $(CU_SRCS_TEST)
 else
 CU_SRCS   =
 endif
 
 ifeq ($(ENABLE_OPENACC_OFFLOAD),true)
-CXXFLAGS += $(OACC_FLAGS) -DMILHOJA_ENABLE_OPENACC_OFFLOAD
-CUFLAGS  +=               -DMILHOJA_ENABLE_OPENACC_OFFLOAD
+CXXFLAGS += $(OACC_FLAGS)
 LDFLAGS  += $(OACC_FLAGS)
 endif
 
