Update CELS GitLab CI test suite execution script to remove pre-existing Milhoja libraries.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ test_gnu:
  - echo $FCOMPARE_EXE
  ##-- Install pristine clone of external test repo
  - pushd $CI_BASE_PATH
+ - rm -rf Milhoja_[123]D_${HWFAMILY}_*
  - ls
  - rm -rf $MILHOJA_WORK_REPO
  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@git.cels.anl.gov/joneal/MilhojaTest.git
