Simplify build system so that it complains less.
Some scripts are more liberal now about overwriting files, but the conservative
approach was not acceptable.  Improved build system.  The Milhoja.h file should
now be rebuilt when it should be.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 */.DS_Store
 .ipynb_checkpoints
 ctags
-gatherDataCpp_*_*_*_*_*_*.dat
-gatherDataF2003_*_*_*_*_*_*.dat
+Makefile.configure
 docs/OrchestrationSystem.log
 docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
