Added Makefile.datapacket to base makefile

--- a/Makefile.base
+++ b/Makefile.base
@@ -122,6 +122,8 @@ endif
 	$(CUCOMP) -MM $(CUFLAGS) -o $(@:.o=.d) $<
 	$(CUCOMP) -c $(CUFLAGS) -o $@ $<
 
+include Makefile.datapacket
+
 # Clean removes all intermediate files
 clean:
 	$(RM) -f *.o
