--- a/test/Sedov/gpu/DataPacket_Hydro_gpu_1/Makefile.datapacket
+++ b/test/Sedov/gpu/DataPacket_Hydro_gpu_1/Makefile.datapacket
@@ -1,5 +1,5 @@
 DataPacket_Hydro_gpu_1.cpp: $(TESTDIR)/DataPacket_Hydro_gpu_1.json $(MAKEFILES)
 	@echo "Creating $@ from $<"
-	~/OrchestrationRuntime/tools/datapacket_generator/packet_generator.py -s $(TESTDIR)/sizes.json -l cpp $<
+	$(BASEDIR)/tools/datapacket_generator/packet_generator.py -s $(TESTDIR)/sizes.json -l cpp $<
 	mv $(TESTDIR)/DataPacket*.cpp .
 	mv $(TESTDIR)/DataPacket*.h .
