--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -4,8 +4,8 @@ TESTROOTDIR         = $(BASEDIR)/test
 SEDOVDIR            = $(TESTROOTDIR)/Sedov
 TESTDIR             = $(SEDOVDIR)/cpu
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
-CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR) -I$(TESTDIR)/code_generation
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(TESTDIR) -I$(TESTDIR)/code_generation
 LDFLAGS_TEST        =
 
 SRCS_TEST = \
@@ -21,6 +21,6 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
 	$(SEDOVDIR)/sim_getVariableNames.cpp \
-	$(SEDOVDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
+	$(TESTDIR)/code_generation/cpu_tf00_$(NDIM)D.cpp \
 	$(TESTDIR)/Driver_executeSimulation.cpp \
 	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
