--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -21,6 +21,7 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
 	$(SEDOVDIR)/sim_getVariableNames.cpp \
+	$(TESTDIR)/code_generation/Tile_cpu_tf00_$(NDIM)D.cpp \
 	$(TESTDIR)/code_generation/cpu_tf00_$(NDIM)D.cpp \
 	$(TESTDIR)/Driver_executeSimulation.cpp \
 	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
