--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -32,7 +32,7 @@ SRCS_BASE       = \
     $(SRCDIR)/Milhoja_MoverUnpacker.cpp \
     $(SRCDIR)/Milhoja_Runtime.cpp \
     $(SRCDIR)/Milhoja_RuntimeBackend.cpp \
-    $(SRCDIR)/Milhoja_NullBackend.cpp
+    $(SRCDIR)/Milhoja_CpuMemoryManager.cpp
 
 CU_SRCS_BASE = \
 	$(SRCDIR)/Milhoja_CudaBackend.cu \
