--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -26,11 +26,14 @@ SRCS_TEST = \
     $(TESTBASEDIR)/computeLaplacianFusedActions_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernels_tile_cpu.cpp \
-    $(TESTBASEDIR)/computeLaplacianFusedKernels_oacc_summit.cpp \
-    $(TESTBASEDIR)/computeLaplacianFusedKernelsWeak_packet_oacc_summit.cpp \
-    $(TESTBASEDIR)/computeLaplacianFusedKernelsStrong_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/DataPacket_gpu_1_stream.cpp \
-    $(TESTDIR)/DataPacket_gpu_2_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_dens_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_ener_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_dens_ener_stream.cpp \
     $(TESTDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp
+
+#    $(TESTBASEDIR)/computeLaplacianFusedKernels_oacc_summit.cpp \
+#    $(TESTBASEDIR)/computeLaplacianFusedKernelsWeak_packet_oacc_summit.cpp \
+#    $(TESTBASEDIR)/computeLaplacianFusedKernelsStrong_packet_oacc_summit.cpp \
+
