Hardcoded certain bounds into tile_out arrays (for now), added fused tests and datapackets
I added one new data packet for the Runtime tests, since there needed to be a data packet that could hold both dens and ener variables, but without an extra stream. All 3 tests have passed and seem to run fine.

--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -29,11 +29,11 @@ SRCS_TEST = \
     $(TESTDIR)/DataPacket_gpu_dens_stream.cpp \
     $(TESTDIR)/DataPacket_gpu_ener_stream.cpp \
     $(TESTDIR)/DataPacket_gpu_dens_ener_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_de_1_stream.cpp \
     $(TESTDIR)/testRuntime.cpp \
-    $(RUNTIMEDIR)/runRuntimeTests.cpp
-
-#    $(TESTBASEDIR)/computeLaplacianFusedActions_packet_oacc_summit.cpp \
-#    $(TESTBASEDIR)/computeLaplacianFusedKernels_oacc_summit.cpp \
-#    $(TESTBASEDIR)/computeLaplacianFusedKernelsWeak_packet_oacc_summit.cpp \
-#    $(TESTBASEDIR)/computeLaplacianFusedKernelsStrong_packet_oacc_summit.cpp \
+    $(RUNTIMEDIR)/runRuntimeTests.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedActions_packet_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernels_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernelsStrong_packet_oacc_summit.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernelsWeak_packet_oacc_summit.cpp
 
