--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ test_gnu:
  ##-- Setup all environment variables
  - echo $PWD
  - export CI_BASE_PATH=/tmp/milhoja
+ - mkdir -p $CI_BASE_PATH
  - export MILHOJA_WORK_REPO=$CI_BASE_PATH/MilhojaTest
  - export MILHOJA_CODE_REPO=$CI_BASE_PATH/OrchestrationRuntime
  - cd ..
