Updated milhoja python package README.

--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -39,6 +39,7 @@ commands =
     coverage html --data-file={env:COV_FILE}
 
 [testenv:check]
+# This should only *report* issues.  It should *not* alter any files.
 description = Run code quality checks
 deps =
     --editable=file:///home/joneal/Projects/FlashX/cg-kit
@@ -48,6 +49,8 @@ commands =
     flake8 --per-file-ignores="src/milhoja/__init__.py:F401"
 
 [testenv:format]
+# This can alter files, so users should use with care and this should never be
+# a default task.
 description = Clean-up code with black
 deps = black
 skip_install = true
