--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,44 @@ variables:
  SEDOV_BASELINE_2D:      $MILHOJA_PROJECT_PATH/MilhojaTest/baselines/162a03d3/SedovMpi_2D
  SEDOV_BASELINE_3D:      $MILHOJA_PROJECT_PATH/MilhojaTest/baselines/162a03d3/SedovMpi_3D
 
+test_milhoja_pypkg:
+ stage: test
+ script:
+ ##-- Setup all environment variables
+ - echo $PWD
+ - export CI_BASE_PATH=$(dirname $HOME/$CI_PROJECT_DIR)
+ - export MILHOJA_CODE_REPO=$CI_BASE_PATH/OrchestrationRuntime
+ - export CGKIT_PATH=$CI_BASE_PATH/cg-kit
+ - echo $MILHOJA_CODE_REPO
+ - echo $CGKIT_CODE_REPO
+ ##-- Clean-up from prior runs
+ #    Copy cgkit to this space so that it can be installed without needing special
+ #    permissions.  CGKIT_PATH must be set for tox to work below.
+ - rm -rf $CGKIT_PATH
+ - cp -R $CGKIT_CODE_REPO $CGKIT_PATH
+ ##-- Install tox
+ - module load python/3.8.10-sfhmzp4
+ - rm -rf $CI_BASE_PATH/toxbase
+ - which python
+ - python -m venv $CI_BASE_PATH/toxbase
+ - source $CI_BASE_PATH/toxbase/bin/activate
+ - which python
+ - which pip
+ - python -m pip install --upgrade pip
+ - pip install --upgrade setuptools
+ - pip install tox
+ - pip list
+ ##-- Run all tests
+ - pushd $MILHOJA_CODE_REPO/tools/milhoja_pypkg
+ - tox -r -e check,coverage,report
+ - popd
+ ##-- Save artifacts
+ - tar cvfz milhoja_pypkg_coverage.tgz $MILHOJA_CODE_REPO/tools/milhoja_pypkg/htmlcov
+artifacts:
+    paths:
+     - milhoja_pypkg_coverage.tgz
+    expire_in: never
+
 test_gnu:
  stage: test
  script:
@@ -70,7 +108,7 @@ test_gnu:
  - rm -rf $CGKIT_PATH
  - ls
  ##-- Copy cgkit to this space so that it can be installed without needing special
- #    permissions.  CGKIT_PATH must be set for tox to work below.
+ #    permissions.
  - cp -R $CGKIT_CODE_REPO $CGKIT_PATH
  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@git.cels.anl.gov/joneal/MilhojaTest.git
  - cd $MILHOJA_WORK_REPO
@@ -112,7 +150,7 @@ test_gnu:
  - pip install $(ls milhoja-*.tar.gz)
  ##-- Check python virtual environment
  - pip list
- - $MILHOJA_CODE_REPO/tools/test_milhoja_installation.py
+ - $MILHOJA_CODE_REPO/tools/test_milhoja_installation.py -v 2
  ##-- Build and run tests
  # Build all variants of a single test first and then run all at once
  - cd $MILHOJA_WORK_REPO/gce
