--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,11 +48,13 @@ test_milhoja_pypkg:
  - export CGKIT_PATH=$CI_BASE_PATH/cg-kit
  - echo $MILHOJA_CODE_REPO
  - echo $CGKIT_CODE_REPO
+ - echo $CGKIT_PATH
  ##-- Clean-up from prior runs
  #    Copy cgkit to this space so that it can be installed without needing special
  #    permissions.  CGKIT_PATH must be set for tox to work below.
  - rm -rf $CGKIT_PATH
  - cp -R $CGKIT_CODE_REPO $CGKIT_PATH
+ - ls $CGKIT_PATH
  ##-- Install tox
  - module load python/3.8.10-sfhmzp4
  - rm -rf $CI_BASE_PATH/toxbase
@@ -133,7 +135,6 @@ test_gnu:
  - pip install --upgrade setuptools
  - pip install nose
  - pip install --editable=file://${CGKIT_PATH}
- - pip install tox
  - pip install numpy
  - pip install scipy
  - pip install pandas
