--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -42,7 +42,7 @@ commands =
 # This should only *report* issues.  It should *not* alter any files.
 description = Run code quality checks
 deps =
-    --editable=file:///home/joneal/Projects/FlashX/cg-kit
+    --editable=file://{env:CGKIT_PATH}
     flake8
 commands =
     python setup.py check --strict --metadata
